src/ui/components/views/snapshots/gest__ui__components__views__iteration_graph__tests__it_renders_a_blocking_task_with_the_blocking_indicator.snap
---
source: src/ui/components/views/iteration_graph.rs
expression: out
---

  Iter
  1 phase · 1 task

  ◆  Phase 1  ──
  ◐  cccccccc  blocker                              ◐ in progress  ! blocking
