src/ui/components/views/snapshots/gest__ui__components__views__iteration_graph__tests__it_renders_a_long_title_truncated_with_ellipsis.snap
---
source: src/ui/components/views/iteration_graph.rs
expression: out
---

  Iter
  1 phase · 1 task

  ◆  Phase 1  ──
  ○  dddddddd  this title is long enough that it …  ○ open
