src/ui/components/views/snapshots/gest__ui__components__views__iteration_graph__tests__it_renders_a_multi_task_phase_with_branch_connectors.snap
---
source: src/ui/components/views/iteration_graph.rs
expression: out
---

  Iter
  1 phase · 3 tasks

  ◆  Phase 1  ──
  ├─╮─╮
  ● │ │  aaaaaaaa  first task                           ● done
  │ ◐ │  bbbbbbbb  second task                          ◐ in progress
  │ │ ○  cccccccc  third task                           ○ open
  ╰─╯─╯
