src/ui/components/views/snapshots/gest__ui__components__views__iteration_graph__tests__it_renders_multiple_phases_with_continuation_lines.snap
---
source: src/ui/components/views/iteration_graph.rs
expression: out
---

  Iter
  3 phases · 3 tasks

  ◆  Phase 1  ──
  ●  aaaaaaaa  phase one task                       ● done
  │
  ◆  Phase 2  ──
  ◐  bbbbbbbb  phase two task                       ◐ in progress
  │
  ◆  Phase 3  ──
  ○  cccccccc  phase three task                     ○ open
